# UnityPerformanceTuningBible

./: .gitignore  Dockerfile  Gemfile  Gruntfile.js  README.md  README_CONTRIBUTER.md  README_CONTRIBUTOR.md  README_EB.md  README_EN.md  Third Party Notices.md  build-in-docker-epub.sh  build-in-docker.sh  build-search-index.js  build-web.sh  package-lock.json  package.json  rebuild-css.sh  redpen-conf-ja.xml  setup.sh
.github/workflows/: deploy-web.yml  on_push.yml
articles/: Rakefile  backcover.tex  catalog.yml  config-epub-en.yml  config-epub-jp.yml  config-epub-ko.yml  config-epub.yml  config-jp.yml  config.yml  epub_style.css  epub_style.scss  locale.yml  prh.yml  style-web.css  style-web.scss  style.css  style.scss  title-epub.tex  title.tex
articles/doc/: catalog.ja.md  catalog.md  customize_epub.ja.md  customize_epub.md  format.ja.md  format.md  format_idg.ja.md  makeindex.ja.md  makeindex.md  pdfmaker.ja.md  pdfmaker.md  preproc.ja.md  preproc.md  quickstart.ja.md  quickstart.md  writing_vertical.ja.md  writing_vertical.md
articles/layouts/: config-local.tex.erb  layout-web.html.erb
articles/sty/: README.md  gentombow.sty  jsbook.cls  jumoline.sty  plistings.sty  review-base.sty  review-custom.sty  review-jsbook.cls  review-style.sty  review-tcbox.sty  reviewmacro.sty  techbooster-doujin-base.sty
prh-rules/: README.ja.md  README.md  package.json  test.js
translation/: .gitignore  LICENSE  README.md  main.py  pyproject.toml
translation/translator/: review2xml.py  test_review2xml.py  test_xml2review.py  translate.py  xml2review.py
(+60 files in other folders)
